--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 
-.container{
+body {
   width: 100vw;
   height: 100vh;
   background-image: url(images/background_image.png);
@@ -31,7 +31,7 @@
 .content h1{
   font-size: 50px;
   font-weight: 1000;
-  color: orange;
+  color: #FEFF00;
   margin-bottom: 50px;
 }
 
@@ -44,17 +44,18 @@
   color: #fff;
   align-items: center;
   margin-top: 30px;
-  margin-bottom: 300px;
   cursor: pointer;
 }
 
-.content button img{
+.content a img{
   width: 80px;
-  margin-left: 10px;
+  margin-top: 7px;
+  margin-left: 50px;
 }
 
 .tlc{
   display: flex;
+  margin-top: 600px;
 }
 
 .tlc p{
@@ -113,11 +114,14 @@
   }
 }
 
-@media (max-width: 500px){
-  *{
-    padding: 0;
-    margin: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    box-sizing: border-box;
-  }
+@media only screen and (max-width:1300px) and (min-width:0px) {
+
+}
+
+@media only screen and (max-width:950px) and (min-width:0px) {
+  
+}
+
+@media only screen and (max-width:550px) and (min-width:0px) {
+  
 }
